// Copyright 2021-2022 Zenauth Ltd.

syntax = "proto3";

package cerbos.cloud.apikey.v1;

import "google/api/visibility.proto";
import "google/protobuf/duration.proto";
import "validate/validate.proto";

option go_package = "github.com/cerbos/cloud-api/genpb/cerbos/cloud/apikey/v1;apikeyv1";

message IssueAccessTokenRequest {
  string client_id = 1 [(validate.rules).string.len = 12];
  string client_secret = 2 [(validate.rules).string.min_len = 1];
}

message IssueAccessTokenResponse {
  string access_token = 1 [(validate.rules).string.min_len = 1];
  google.protobuf.Duration expires_in = 2 [(validate.rules).duration.required = true];
}

service ApiKeyService {
  option (google.api.api_visibility).restriction = "EXPERIMENTAL";

  rpc IssueAccessToken(IssueAccessTokenRequest) returns (IssueAccessTokenResponse) {}
}
